SERVER-28877 Fix cancel race which can cause crashes during elections.

(cherry picked from commit 7844ffc9be25e16daa9615949941b8749ad3de9f)